@@ -2,21 +2,24 @@ from parsimonious.grammar import Grammar
 
 grammar = Grammar(
     r"""
-    expr = (class / call_result / attr_def / emptyline)*
-    class = class_def attr_def* ws?
+    expr = (class / call_result / attr_def / emptyline / funct_def)*
+    class = class_def attr_def* funct_def* ws?
     class_def   = intend? class_name args? ":"* ws?
-    attr_def  = intend? id ("=" right_part)* ws?
-    right_part = args / call_result / id / string / text
+    attr_def  = intend? id type? ("=" (right_part))* ws?
+    right_part =  (id args_in_brackets) / string / args  / call_result / args_in_brackets / id / text
+    type = ":" ( (id args_in_brackets) / id)
     string = one_quote_str / double_quotes_str
-    one_quote_str = ~"\'[^\']+\'"
-    double_quotes_str = ~'"[^\"]+"'
+    one_quote_str = ~"\'[^\']+\'"i
+    double_quotes_str = ~'"[^\"]+"'i
+    funct_def = intend? "def" id args? ":"* ws?
+    args_in_brackets = "[" ((id/string)* ","* )* "]"
     args     = "(" (( call_result / args / attr_def / id )* ","* )* ")"
     call_result = id args ws?
     class_name  = "class" id
-    id          = (((dot_id / text)+ ","*) *  / dot_id / text) ws?
+    id          = (((dot_id / text)+ ) *  / dot_id / text) ws?
     dot_id      = (text".")*text
-    intend      = "    " / "\t"
-    text        = !class ~"['\_A-Z 0-9\{\}\[\]_\"\-\/\$:<%>\w]*"i
+    intend      = "    " / "\t" / "\n"
+    text        = !class ~"['\_A-Z 0-9\{\}_\"\-\/\$<%>\+\-\w]*"i
     ws          = ~"\s*"
     emptyline   = ws+
 """
